--- a/index.html
+++ b/index.html
@@ -5,6 +5,127 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" /> 
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body></body>
+  <body>
+    <section class="header">
+      <nav class="header_menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item_no-bullit">
+            <a class="header__link_active">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item">
+            <a class="header__link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="логотип">
+      </a>
+      <address class="address">
+        <a href="tel:+99995555555">+9 999 555 5555</a><br>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+        наб. Принсенграхт 263- 265, Амстердам
+      </address>
+    </section>
+    <main>
+      <section class="cover">
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
+          <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
+          <span class="aligned-text_right letter-spacing-extended">н<span class="no-letter-spacing">ад</span>о</span>
+        </h1>
+        <div class="cover__description">
+          <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
+      </section>
+      <section class="lots">
+        <h3 class="lots__heading">Лоты</h3>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+                <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+                <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+              </article>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+                <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
+      </section>
+      <section class="about">
+        <div class="about__logo">
+          <img class="about__logo-image" src="./images/logo-white.svg" alt="белый логотип">
+        </div>
+          <h4 class="about__title">Об аукционе</h4>
+          <article class="about__text">
+            <p>Здесь вы не <span class="letter-spacing-extended-01">встретите очередное пафосное собрание невероятно дорогого</span> антиквариата. <span class="letter-spacing-extended-02">Наши</span> лоты вообще не должны <span class="letter-spacing-shrink-01">были попасть</span> ни на один аукцион. Потому что кому нужен <span class="letter-spacing-extended-03">дневник</span> девочки-подростка или картина, которую может <span class="letter-spacing-extended-02">нарисовать</span> даже ребёнок? Кому нужны все эти странные <span class="letter-spacing-extended-02">вещи, созданные </span>любителями?</p>
+            <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то <span class="letter-spacing-extended-04">они</span> казались просто <span class="letter-spacing-extended-01">неудачными.</span> Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно <span class="letter-spacing-extended-01">представить современную культуру.</span> Когда в эти вещи не верил никто, продолжали верить <span class="letter-spacing-extended-01">их создатели.</span> И сейчас эти лоты стали культовыми. </p>
+          </article>
+        </section>
+      <section class="footer">
+        <address class="address">
+          <a href="tel:+99995555555">+9 999 555 5555</a><br>
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
+          наб. Принсенграхт 263- 265, Амстердам
+        </address>
+        <nav class="footer__menu">
+          <ul class="footer__menu-list">
+            <li class="footer__menu-list-item">
+              <a class="footer__menu-link_active">главная</a>
+            </li>
+            <li class="footer__menu-list-item">
+              <a class="footer__menu-link" href="#0">посмотреть лоты</a>
+            </li>
+            <li class="footer__menu-list-item">
+              <a class="footer__menu-link" href="#0">об аукционе</a>
+            </li>
+          </ul>
+        </nav>
+        <ul class="footer__social-list">
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0">
+              <img class="footer__social-icon" src="./images/yt.svg" alt="иконка yotube">
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0">
+              <img class="footer__social-icon" src="./images/vk.svg" alt="иконка vcontacte">
+            </a>
+          </li>
+          <li class="footer__social-list-item">
+            <a class="footer__social-link" href="#0">
+              <img class="footer__social-icon" src="./images/pinterest.svg" alt="иконка printerest">
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
