--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    <section class="header">
+    <header class="header">
       <nav class="header_menu">
         <ul class="header__links-list">
           <li class="header__links-list-item_no-bullit">
@@ -32,7 +32,7 @@
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
         наб. Принсенграхт 263- 265, Амстердам
       </address>
-    </section>
+    </header>
     <main>
       <section class="cover">
         <div class="overlay"></div>
@@ -89,7 +89,7 @@
             <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то <span class="letter-spacing-extended-04">они</span> казались просто <span class="letter-spacing-extended-01">неудачными.</span> Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно <span class="letter-spacing-extended-01">представить современную культуру.</span> Когда в эти вещи не верил никто, продолжали верить <span class="letter-spacing-extended-01">их создатели.</span> И сейчас эти лоты стали культовыми. </p>
           </article>
         </section>
-      <section class="footer">
+      <footer class="footer">
         <address class="address">
           <a href="tel:+99995555555">+9 999 555 5555</a><br>
           <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
@@ -125,7 +125,7 @@
             </a>
           </li>
         </ul>
-      </section>
+      </footer>
     </main>
   </body>
 </html>
