with coorections based on the reviewer comments

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -14,7 +14,7 @@
       <nav class="header_menu">
         <ul class="header__links-list">
           <li class="header__links-list-item_no-bullit">
-            <a class="header__link_active">главная</a>
+            <a class="header_link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
             <a class="header__link" href="#0">посмотреть лоты</a>
@@ -39,15 +39,17 @@
         <h1 class="cover__title">
           <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
           <span class="aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
-          <span class="aligned-text_right letter-spacing-extended">н<span class="no-letter-spacing">ад</span>о</span>
+          <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
-          <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
-          <button class="bet-button">Сделать ставку</button>
+          <h2 class="cover__description-text">
+            <p>Аукцион вещей, в которые никто не верил</p>
+          </h2>
+          <button class="bet-button" type="submit">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
-        <h3 class="lots__heading">Лоты</h3>
+        <h2 class="lots__heading">Лоты</h2>
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a class="card-link" href="#0">
@@ -83,12 +85,13 @@
         <div class="about__logo">
           <img class="about__logo-image" src="./images/logo-white.svg" alt="белый логотип">
         </div>
-          <h4 class="about__title">Об аукционе</h4>
+          <h2 class="about__title">Об аукционе</h2>
           <article class="about__text">
-            <p>Здесь вы не <span class="letter-spacing-extended-01">встретите очередное пафосное собрание невероятно дорогого</span> антиквариата. <span class="letter-spacing-extended-02">Наши</span> лоты вообще не должны <span class="letter-spacing-shrink-01">были попасть</span> ни на один аукцион. Потому что кому нужен <span class="letter-spacing-extended-03">дневник</span> девочки-подростка или картина, которую может <span class="letter-spacing-extended-02">нарисовать</span> даже ребёнок? Кому нужны все эти странные <span class="letter-spacing-extended-02">вещи, созданные </span>любителями?</p>
+            <p><span class="letter-spacing-extended-01">Здесь вы не встретите очередное</span> пафосное собрание невероятно дорогого антиквариата. <span class="letter-spacing-extended-02">Наши</span><span class="letter-spacing-extended-01"> лоты вообще не</span> должны <span class="letter-spacing-shrink-01">были попасть</span> ни на один <span class="letter-spacing-extended-01">аукцион.</span> Потому что кому нужен <span class="letter-spacing-extended-03">дневник</span> девочки-подростка или картина, которую может <span class="letter-spacing-extended-02">нарисовать </span><class="letter-spacing-extended-01">даже</span> ребёнок? Кому нужны <span class="letter-spacing-extended-01">все эти странные вещи, созданные </span>любителями?</p>
             <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то <span class="letter-spacing-extended-04">они</span> казались просто <span class="letter-spacing-extended-01">неудачными.</span> Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно <span class="letter-spacing-extended-01">представить современную культуру.</span> Когда в эти вещи не верил никто, продолжали верить <span class="letter-spacing-extended-01">их создатели.</span> И сейчас эти лоты стали культовыми. </p>
           </article>
         </section>
+    </main>
       <footer class="footer">
         <address class="address">
           <a href="tel:+99995555555">+9 999 555 5555</a><br>
@@ -98,7 +101,7 @@
         <nav class="footer__menu">
           <ul class="footer__menu-list">
             <li class="footer__menu-list-item">
-              <a class="footer__menu-link_active">главная</a>
+              <a class="footer__menu-link footer__menu-link_active">главная</a>
             </li>
             <li class="footer__menu-list-item">
               <a class="footer__menu-link" href="#0">посмотреть лоты</a>
@@ -126,6 +129,5 @@
           </li>
         </ul>
       </footer>
-    </main>
-  </body>
+    </body>
 </html>
