--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
           <span class="aligned-text_right"><span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span></span>
         </h1>
         <div class="cover__description">
-          <h2 class="cover__description-text">
-            <p>Аукцион вещей, в которые никто не верил</p>
-          </h2>
+          <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
           <button class="bet-button" type="submit">Сделать ставку</button>
         </div>
       </section>
@@ -87,8 +85,8 @@
         </div>
           <h2 class="about__title">Об аукционе</h2>
           <article class="about__text">
-            <p><span class="letter-spacing-extended-01">Здесь вы не встретите очередное</span> пафосное собрание невероятно дорогого антиквариата. <span class="letter-spacing-extended-02">Наши</span><span class="letter-spacing-extended-01"> лоты вообще не</span> должны <span class="letter-spacing-shrink-01">были попасть</span> ни на один <span class="letter-spacing-extended-01">аукцион.</span> Потому что кому нужен <span class="letter-spacing-extended-03">дневник</span> девочки-подростка или картина, которую может <span class="letter-spacing-extended-02">нарисовать </span><class="letter-spacing-extended-01">даже</span> ребёнок? Кому нужны <span class="letter-spacing-extended-01">все эти странные вещи, созданные </span>любителями?</p>
-            <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то <span class="letter-spacing-extended-04">они</span> казались просто <span class="letter-spacing-extended-01">неудачными.</span> Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно <span class="letter-spacing-extended-01">представить современную культуру.</span> Когда в эти вещи не верил никто, продолжали верить <span class="letter-spacing-extended-01">их создатели.</span> И сейчас эти лоты стали культовыми. </p>
+            <p><span class="letter-spacing-extended-one">Здесь вы не встретите очередное</span> пафосное собрание невероятно дорогого антиквариата. <span class="letter-spacing-extended-02">Наши</span><span class="letter-spacing-extended-one"> лоты вообще не</span> должны <span class="letter-spacing-shrink-one">были попасть</span> ни на один <span class="letter-spacing-extended-one">аукцион.</span> Потому что кому нужен <span class="letter-spacing-extended-03">дневник</span> девочки-подростка или картина, которую может <span class="letter-spacing-extended-02">нарисовать </span><span class="letter-spacing-extended-one">даже</span> ребёнок? Кому нужны <span class="letter-spacing-extended-one">все эти странные вещи, созданные </span>любителями?</p>
+            <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то <span class="letter-spacing-extended-04">они</span> казались просто <span class="letter-spacing-extended-one">неудачными.</span> Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно <span class="letter-spacing-extended-one">представить современную культуру.</span> Когда в эти вещи не верил никто, продолжали верить <span class="letter-spacing-extended-one">их создатели.</span> И сейчас эти лоты стали культовыми. </p>
           </article>
         </section>
     </main>
