--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </h1>
         <div class="cover__description">
           <h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
-          <button class="bet-button" type="submit">Сделать ставку</button>
+          <button class="bet-button" type="button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
